tests/ui/closures/2229_closure_analysis/unique-borrows-are-invariant-1.stderr
error: lifetime may not live long enough
  --> $DIR/unique-borrows-are-invariant-1.rs:6:31
   |
LL | fn extend_lifetime<'a, 'b>(x: &mut (&'a str,), y: &'b str) {
   |                    --  -- lifetime `'b` defined here
   |                    |
   |                    lifetime `'a` defined here
LL |     let mut closure = |input| x.0 = input;
   |                               ^^^^^^^^^^^ assignment requires that `'b` must outlive `'a`
   |
   = help: consider adding the following bound: `'b: 'a`

error: aborting due to previous error

